# cargo-leptos

./: .gitignore  Cargo.toml  Dockerfile  README.md  UPGRADE.md  dist-workspace.toml  flake.nix  leptos.toml  test.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.nu
.github/: build-setup.yml  dependabot.yml
.github/workflows/: prepare-deps.yml  prepare-musl.yml  release.yml  test.yml
example/: .env  Cargo.toml
example/project/src/app/: mod.rs
example/src/: lib.rs  main.rs
example/src/app/: mod.rs
example/src/server/: actix_integ.rs  generated.rs  mod.rs
example/style/: main.scss
examples/: README.md
examples/basic/: leptos.toml
examples/basic/app/: Cargo.toml  index.html
examples/basic/app/src/: generated.rs  lib.rs
examples/basic/app/style/: main.scss
examples/basic/client/: Cargo.toml
examples/basic/client/src/: lib.rs
examples/basic/server/: Cargo.toml
examples/basic/server/src/: generated.rs  main.rs
examples/notify/: Cargo.toml  tailwind.config.js
examples/notify/src/: app.rs
examples/project/: Cargo.toml  index.html
examples/project-lightningcss/: Cargo.toml
examples/project-lightningcss/src/: lib.rs
examples/project-lightningcss/style/: base.css  components.css  main.css
examples/project/additionnal_files/: foo.json
examples/project/assets/: stuff.txt
examples/project/end2end/: package-lock.json  package.json  playwright.config.ts
examples/project/end2end/tests/: example.spec.ts
examples/project/js/: foo.js
examples/project/src/: app.rs  lib.rs  server.rs
examples/project/src/app/: mod.rs
examples/project/src/server/: actix_integ.rs  mod.rs
examples/ssr-splitting/: Cargo.toml  README.md
examples/ssr-splitting/end2end/: package-lock.json  package.json
examples/ssr-splitting/src/: app.rs  server.rs
examples/ssr-splitting/style/: main.scss
examples/workspace/: Cargo.toml
examples/workspace/proj1-app/: Cargo.toml
examples/workspace/proj1-front/: Cargo.toml
examples/workspace/proj1-front/src/: lib.rs
examples/workspace/proj1-server/: Cargo.toml
examples/workspace/proj1-server/src/: actix_integ.rs  main.rs
examples/workspace/proj2/: Cargo.toml
examples/workspace/proj2/src/: main.rs
examples/workspace/project1/app/: Cargo.toml
examples/workspace/project1/app/src/: lib.rs
examples/workspace/project1/extras/extra-package-1/: Cargo.toml
examples/workspace/project1/extras/extra-package-1/src/: lib.rs
examples/workspace/project1/extras/extra-package-2/: Cargo.toml
examples/workspace/project1/extras/extra-package-2/src/: lib.rs
examples/workspace/project1/front/: Cargo.toml
examples/workspace/project1/front/src/: lib.rs
examples/workspace/project1/server/: Cargo.toml
examples/workspace/project1/server/src/: main.rs
examples/workspace/project2/: Cargo.toml
examples/workspace/project2/src/: lib.rs  main.rs
examples/workspace/project2/src/app/: mod.rs
examples/workspace/project2/src/server/: mod.rs
src/: cargo.rs  config.rs  config_paths.rs  developer.md  error.rs  fs.rs  html.rs  leptos.toml  lib.rs  logger.rs  main.rs  projects.rs  readme.md  readme.tpl.md  sass.rs  sync.rs  tests.rs  util.rs  wasm_pack.rs
src/command/: build.rs  end2end.rs  mod.rs  new.rs  serve.rs  test.rs  watch.rs
src/compile/: assets.rs  build_scripts.rs  change.rs  front.rs  hash.rs  lightningcss.rs  mod.rs  sass.rs  server.rs  style.rs  tailwind.rs  tests.rs
src/config/: assets.rs  bin_config.rs  bin_package.rs  cli.rs  config.rs  dotenvs.rs  end2end.rs  hash_file.rs  leptos.rs  lib_config.rs  lib_package.rs  lightningcss.rs  mod.rs  paths.rs  profile.rs  project.rs  style.rs  tailwind.rs  tests.rs  version.rs
src/config/snapshots/: cargo_leptos__config__tests__project.snap  cargo_leptos__config__tests__workspace.snap  cargo_leptos__config__tests__workspace_bin_args_project2.snap  cargo_leptos__config__tests__workspace_in_subdir_project2.snap  cargo_leptos__config__tests__workspace_project1.snap  cargo_leptos__config__tests__workspace_project2.snap
src/ext/: anyhow.rs  cargo.rs  color_eyre.rs  compress.rs  exe.rs  eyre.rs  fs.rs  mod.rs  package.rs  path.rs  sync.rs  tests.rs  util.rs
src/run/: assets.rs  cargo.rs  end2end.rs  generated.rs  html.rs  mod.rs  new.rs  reload.rs  run_config.rs  sass.rs  serve.rs  wasm.rs  wasm_pack.rs  watch.rs
src/service/: mod.rs  notify.rs  patch.rs  reload.rs  serve.rs  site.rs
src/signal/: interrupt.rs  mod.rs  product.rs  reload.rs
src/snapshots/: cargo_leptos__tests__project_build.snap  cargo_leptos__tests__workspace_build.snap
src/task/: mod.rs
src/task/compile/: assets.rs  front.rs  mod.rs  results.rs  server.rs  style.rs
src/tests/project-with-outdated-lock/: Cargo.toml
src/wasm_split_tools/: dep_graph.rs  emit.rs  mod.rs  read.rs  split_point.rs
wix/: main.wxs
