
[package]
name = "cargo-leptos"
license = "MIT"
repository = "https://github.com/leptos-rs/cargo-leptos"
description = "Build tool for Leptos."
categories = ["development-tools", "wasm", "web-programming"]
keywords = ["leptos"]
version = "0.2.39"
edition = "2021"
rust-version = "1.82.0"
authors = ["Henrik Akesson", "Greg Johnston", "Ben Wishovich"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
brotli = "8.0"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
color-eyre = "0.6.5"
libflate = "2.1"
tracing = "0.1.41"
cargo-config2 = "0.1.33"
target-lexicon = "0.13.2"
lightningcss = { version = "1.0.0-alpha.66", features = ["browserslist"] }
flexi_logger = "0.30.2"
tokio = { version = "1.45", default-features = false, features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
# not using notify 5.0 because it uses Crossbeam which has an issue with tokio
notify-debouncer-full = "0.5.0"
which = "8.0"
cargo_metadata = { version = "0.20.0", features = ["builder"] }
serde_json = "1.0"
wasm-bindgen-cli-support = "0.2.100"
reqwest = { version = "0.12.19", features = [
  "blocking",
  "rustls-tls",
  "json",
], default-features = false }
seahash = "4.1"
dirs = "6.0"
camino = "1.1"
dotenvy = "0.15.7"
itertools = "0.14.0"
derive_more = { version = "2.0", features = ["display"] }
flate2 = "1.1"
zip = { version = "4.0", default-features = false, features = ["deflate"] }
tar = "0.4.44"
dunce = "1.0"
bytes = "1.10"
leptos_hot_reload = "0.8.2"
pathdiff = { version = "0.2.3", features = ["camino"] }
semver = "1.0"
md-5 = "0.10.6"
base64ct = { version = "1.7.3", features = ["std"] }
swc = "26.0"
swc_common = "12.0"
shlex = "1.3"
cargo-generate = { version = "0.23.3", features = ["vendored-openssl"] }
ignore = "0.4.23"
walkdir = "2.5"
regex = "1.11.1"
wasm-encoder = { version = "0.206.0", features = ["wasmparser"] }
wasmparser = "0.206.0"

[dev-dependencies]
insta = { version = "1.43", features = ["yaml"] }
temp-dir = "0.1.16"

[features]
full_tests = []
no_downloads = []

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
