
[package]
name = "cargo-leptos"
license = "MIT"
repository = "https://github.com/leptos-rs/cargo-leptos"
description = "Build tool for Leptos."
categories = ["development-tools", "wasm", "web-programming"]
keywords = ["leptos"]
version = "0.3.2"
edition = "2021"
rust-version = "1.82.0"
authors = ["Henrik Akesson", "Greg Johnston", "Ben Wishovich"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
brotli = "8.0"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
color-eyre = "0.6.5"
libflate = "2.2"
tracing = "0.1.44"
cargo-config2 = "0.1.39"
target-lexicon = "0.13.4"
lightningcss = { version = "1.0.0-alpha.68", features = ["browserslist"] }
flexi_logger = "0.31.7"
tokio = { version = "1.48", default-features = false, features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
# not using notify 5.0 because it uses Crossbeam which has an issue with tokio
notify-debouncer-full = "0.6.0"
which = "8.0"
cargo_metadata = { version = "0.23.1", features = ["builder"] }
cargo-lock = "11.0"
serde_json = "1.0"
reqwest = { version = "0.12.28", features = [
  "blocking",
  "rustls-tls",
  "json",
], default-features = false }
seahash = "4.1"
dirs = "6.0"
camino = "1.2"
dotenvy = "0.15.7"
itertools = "0.14.0"
derive_more = { version = "2.1", features = ["display"] }
flate2 = "1.1"
zip = { version = "7.0", default-features = false, features = ["deflate"] }
tar = "0.4.44"
dunce = "1.0"
bytes = "1.11"
leptos_hot_reload = "0.8.3"
pathdiff = { version = "0.2.3", features = ["camino"] }
semver = "1.0"
md-5 = "0.10.6"
base64ct = { version = "1.7.3", features = ["std"] }
swc = "51.0"
swc_common = "18.0"
shlex = "1.3"
cargo-generate = { version = "0.23.7", features = ["vendored-openssl"] }
ignore = "0.4.25"
walkdir = "2.5"
regex = "1.12.2"
clap_complete = "4.5.62"
wasm_split_cli_support = "0.2.0"
clearscreen = "4.0.2"

[dev-dependencies]
insta = { version = "1.45", features = ["yaml"] }
temp-dir = "0.1.16"

[features]
full_tests = []
no_downloads = []

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
