
[package]
name = "cargo-leptos"
license = "MIT"
repository = "https://github.com/leptos-rs/cargo-leptos"
description = "Build tool for Leptos."
categories = ["development-tools", "wasm", "web-programming"]
keywords = ["leptos"]
version = "0.2.31"
edition = "2021"
rust-version = "1.82.0"
authors = ["Henrik Akesson", "Greg Johnston", "Ben Wishovich"]

[package.metadata.wix]
upgrade-guid = "D53446E4-A943-4A64-823F-4CB4855A4B09"
path-guid = "A08FA8BB-CD5A-4C75-85D0-E9DE2B374C14"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "7"
clap = { version = "4.5.61", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
color-eyre = "0.6.5"
libflate = "2"
tracing = "0.1.44"

lightningcss = { version = "1.0.0-alpha.71", features = ["browserslist"] }
flexi_logger = "0.29.8"
tokio = { version = "1.52.1", default-features = false, features = ["full"] }
axum = { version = "0.8.9", features = ["ws"] }
# not using notify 5.0 because it uses Crossbeam which has an issue with tokio
notify-debouncer-full = "0.5.0"
which = "7"
cargo_metadata = { version = "0.19", features = ["builder"] }
serde_json = "1.0.149"
wasm-bindgen-cli-support = "0.2.117"

reqwest = { version = "0.12.28", features = [
    "blocking",
    "rustls-tls",
    "json",
], default-features = false }
seahash = "4.1"
dirs = "6.0"
camino = "1.2"
dotenvy = "0.15"
itertools = "0.14"
derive_more = { version = "2.1.1", features = ["display"] }
flate2 = "1.1.9"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
tar = "0.4.45"
dunce = "1.0"
bytes = "1.11.1"
leptos_hot_reload = "0.7"
pathdiff = { version = "0.2.3", features = ["camino"] }
semver = "1.0.28"
md-5 = "0.10.6"
base64ct = { version = "1.7.3", features = ["alloc"] }
swc = "62.0.0"
swc_common = "21.0.1"
shlex = "1.3.0"
cargo-generate = { version = "0.22", features = ["vendored-openssl"] }
wasm-opt = "0.116.1"
ignore = "0.4.25"
walkdir = "2.5"

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }
temp-dir = "0.1"

[features]
full_tests = []
no_downloads = []

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
