[workspace]
members = ["project1/app", "project1/front", "project1/server", "project2"]
resolver = "2"

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.6", default-features = false }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }
leptos_dom = { version = "0.6", default-features = false }
leptos_actix = { version = "0.6" }

gloo-net = { version = "0.5", features = ["http"] }

# See https://github.com/leptos-rs/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
name = "project1"
bin-package = "server-package"
lib-package = "front-package"
assets-dir = "project1/assets"
style-file = "project1/css/main.scss"
site-root = "target/site/project1"
