[workspace]

[package]
name = "example-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
leptos = { git = "https://github.com/gbj/leptos", default-features = false, features = [
  "serde",
] }
leptos_meta = { git = "https://github.com/gbj/leptos", default-features = false }
leptos_router = { git = "https://github.com/gbj/leptos", default-features = false }

gloo-net = { version = "0.2", features = ["http"] }
reqwest = { version = "0.11", features = ["json"], optional = true }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:reqwest"]
