[workspace]

[package]
name = "example-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
example-app = { path = "../app", default-features = false, features = [
  "hydrate",
] }

leptos = { git = "https://github.com/gbj/leptos", default-features = false, features = [
  "hydrate",
  "serde",
] }
leptos_meta = { git = "https://github.com/gbj/leptos", default-features = false, features = [
  "hydrate",
] }
leptos_router = { git = "https://github.com/gbj/leptos", default-features = false, features = [
  "hydrate",
] }

console_log = "0.2"
log = "0.4"
