[workspace]

[package]
name = "example-server"
version = "0.1.0"
edition = "2021"

[dependencies]
example-app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { git = "https://github.com/gbj/leptos", default-features = false, features = [
  "ssr",
  "serde",
] }
leptos_meta = { git = "https://github.com/gbj/leptos", default-features = false, features = [
  "ssr",
] }
leptos_router = { git = "https://github.com/gbj/leptos", default-features = false, features = [
  "ssr",
] }

actix-files = "0.6"
actix-web = { version = "4", features = ["macros"] }
futures = "0.3"
log = "0.4"
simple_logger = "2"
serde_json = "1.0.85"
