[package]
name = "proj1-front"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proj1-app = { path = "../proj1-app" }
leptos = { git = "https://github.com/gbj/leptos", default-features = false, features = [
  "serde",
  "hydrate",
] }
log = "0.4"
wasm-bindgen = "0.2"
console_log = "0.2"
console_error_panic_hook = "0.1"
