[package]
name = "project2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
leptos = { workspace = true, features = ["serde"] }
leptos_meta.workspace = true
leptos_router.workspace = true


gloo-net = { version = "0.5", features = ["http"] }
log = "0.4"
cfg-if = "1.0"

# dependecies for client (enable hydrate set)
wasm-bindgen = { version = "0.2.92", optional = true }
console_log = { version = "1.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# dependecies for server (enable when ssr set)
leptos_actix = { workspace = true, optional = true }
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", features = ["macros"], optional = true }
futures = { version = "0.3", optional = true }
simple_logger = { version = "5.0", optional = true }
serde_json = { version = "1.0", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
dotenvy = { version = "0.15", optional = true }

[features]
default = ["ssr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "dep:wasm-bindgen",
  "dep:console_log",
  "dep:console_error_panic_hook",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_actix",
  "dep:reqwest",
  "dep:actix-web",
  "dep:actix-files",
  "dep:futures",
  "dep:simple_logger",
  "dep:serde_json",
  "dep:dotenvy",
]


[package.metadata.leptos]
# See https://github.com/leptos-rs/cargo-leptos for documentation of all the parameters.

# [Optional] Files in the asset_dir will be copied to the target/site directory
assets-dir = "src/assets"

# Main style file. If scss or sass then it will be compiled to css.
# the parent folder will be watched for changes
style-file = "src/main.scss"

site-root = "target/site/project2"
bin-features = ["ssr"]

lib-features = ["hydrate"]
