[package]
name = "app-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.1.0-beta", default-features = false, features = [
  "serde",
] }
leptos_meta = { version = "0.1.0-beta", default-features = false }

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]
