[package]
name = "front-package"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-package = { path = "../app" }
leptos = { workspace = true, features = ["serde", "hydrate"] }
log = "0.4"
wasm-bindgen = "0.2"
console_log = "0.2"
console_error_panic_hook = "0.1"
